fix draw logo alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,6 +25,8 @@ md-sidenav-container.app-dark {
 }
 
 #logo-image-drawer {
+  display:block;
+  margin:auto;
   height: 150px;
 }
 
